# docs/swagger.json
@@ -8,5 +8,73 @@
     },
     "host": "localhost:8080",
     "basePath": "/",
-    "paths": {}
+    "paths": {
+        "/": {
+            "get": {
+                "description": "welcome page",
+                "tags": [
+                    "main"
+                ],
+                "summary": "MainPage",
+                "responses": {}
+            }
+        },
+        "/delete": {
+            "get": {
+                "description": "remove value from BST",
+                "tags": [
+                    "remove"
+                ],
+                "summary": "Remove",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "int",
+                        "name": "remove",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/insert": {
+            "get": {
+                "description": "insert value in BST",
+                "tags": [
+                    "insert"
+                ],
+                "summary": "Insert",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "int",
+                        "name": "insert",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/search": {
+            "get": {
+                "description": "lookup value in BST",
+                "tags": [
+                    "search"
+                ],
+                "summary": "Search",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "int",
+                        "name": "seacrh",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        }
+    }
 }
